# PyBayes

./: Pipfile  README.md  all_packages_20230122.txt  bayes_estimate.py  beta.stan  beta2.stan  beta_binomial.stan  beta_binomial_linear.stan  linear_regression.stan  pyproject.toml  requirements.txt  requirements_cpu.txt  requirements_metal.txt  two_compartment.py  two_compartment.stan
mattmcd/: aoc2024.py  aoc2025.py  econ.py  io.py  journal_20240908_pymc.py  simpy.py
scripts/: GPSS_Lab1_gp.ipynb  REnvPatch.R  ScotRail_20220822.ipynb  StateMachine.g4  amm_math_20210308.html  amm_math_20210308.ipynb  aoc2022.py  arxiv_links_20230325.csv  arxiv_links_20230325.html  banknote_classifier.py  cvxpylayers_20210418.ipynb  dc_manipulating_time_series.ipynb  edward_simple.ipynb  ftse_constituents.py  fx_cycles.py  gp_first_principles.ipynb  gp_first_principles_01.ipynb  gpy_simple.ipynb  indexed_expressions_20211107.ipynb  intro_math_modelling_ch1_fowkes_20220219.ipynb  jax_tutorial_20220721.ipynb  jax_tutorial_20220726.py  journal_20220819.ipynb  journal_20220820.ipynb  journal_20220822.ipynb  journal_20220823.ipynb  journal_20220824.ipynb  journal_20220825.ipynb  journal_20220826.ipynb  journal_20220829.ipynb  journal_20220830.ipynb  journal_20220831.ipynb  journal_20220902.ipynb  journal_20220902.py  journal_20220905.ipynb  journal_20220906.ipynb  journal_20220907.ipynb  journal_20220908.ipynb  journal_20220912.ipynb  journal_20220921.ipynb  (+101 more)
scripts/aoc_2024/: aoc_2024.sql
scripts/state_machine/: StateMachine.interp  StateMachine.tokens  StateMachineLexer.interp  StateMachineLexer.py  StateMachineListener.py  StateMachineParser.py
