[project]
name = "PyBayes"
version = "0.0.1"
description = "Long lived dev repo for exploring different modelling packages"
requires-python = ">=3.12, <3.14"
dependencies = [
    "numpy",
    "pandas==2.3.2",
    "sympy",
    "scipy",
    "sqlalchemy",
    "matplotlib",
    "seaborn",
    "arviz",
    "tensorflow-macos>=2.16.2",
    "tensorflow-probability",
    "tensorflow-datasets",
    "torch",
    "torch-geometric",
    "transformers",
    "einops",
    "accelerate",
    "pymde",
    "scikit-learn",
    "statsmodels",
    "networkx",
    "jaxlib",
    "jax>=0.4.34",
    "jax-metal==0.1.1",
    "lifelines",
    "scikit-survival",
    #    "matlabengine==23.2.1",
    "flax",
    "blackjax",
    "optax",
    "cvxpy",
    "pzflow",
    "cvxpylayers",
    "antlr4-python3-runtime",
    "jupyter",
    "jupyterlab",
    "ipython",
    "ipywidgets",
    "jupytext",
    "kagglehub",
    "arxiv",
    "pymc",
    "simpy",
    "langchain",
    "keras==3.11.3",
    "streamlit",
    "psycopg2-binary",
    "mlx",
    "einops",
    "antlr4-tools",
    "open3d",
    "bambi",
    "pymc-marketing",
    "pymc-experimental",
    "sympytensor",
    "pysd",
    "datasets",
    "ydf==0.9.0",
    "pandas-stubs==2.3.0.250703",
    "kymatio==0.3.0",
    "boto3==1.40.20",
]

[tool.uv]
package = false
